RbA Build/src/objects/Charge__c.object
<CustomObject>
    <description>Also known as &quot;Responsibility&quot;</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Categorizes the problem in the service request</description>
        <inlineHelpText>Categorizes the problem in the service request</inlineHelpText>
        <label>Source of Defect</label>
        <picklist>
            <controllingField>Charge_Cost_To__c</controllingField>
            <picklistValues>
                <fullName>Aesthetics/Function (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics/Function (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayworld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass(Sash/Panel) (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass(Sash/Panel) (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grilles (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grilles (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal by Andersen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screens (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screens (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit (C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Cost_To__c</fullName>
        <description>The responsible party for the service</description>
        <inlineHelpText>The responsible party for the service</inlineHelpText>
        <label>Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Id__c</fullName>
        <formula>Service_Product__r.Sold_Order_Product_Asset__r.Original_Order_Product__r.PricebookEntry.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <description>Used for UI purposes on VF page to display Installed Product Name</description>
        <formula>Service_Product__r.Sold_Order_Product_Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Product_Text__c</fullName>
        <description>For UI purposes</description>
        <formula>Service_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects the Charge record to the Order Item</description>
        <label>Service Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Responsibility</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validate_Service_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Service Request functionality</description>
        <label>Validate Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variant_Number__c</fullName>
        <description>The original order product&apos;s variant number.</description>
        <formula>Service_Product__r.Sold_Order_Product_Asset__r.Variant_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The original order product&apos;s variant number.</inlineHelpText>
        <label>Variant Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Where__c</fullName>
        <description>Based on Responsibility and Source of Defect</description>
        <inlineHelpText>Based on Responsibility and Source of Defect</inlineHelpText>
        <label>Defect</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Charge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCT-{000}</displayFormat>
        <label>Charge Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>